icon change on recipe cards

--- a/app/views/users/days/_card_recipe.html.erb
+++ b/app/views/users/days/_card_recipe.html.erb
@@ -7,7 +7,7 @@
       <div class="text-sm ml-2 ">
         <p><%= day.lunch.cook_time%> mins </p>
       </div>
-      <%= image_tag 'calorie.svg', class: "calorie ml-3 "%>
+      <i class="fas fa-utensils ml-3"></i>
       <div class="text-sm  ml-2">
        <p> <%= day.lunch.cal_per_serving%> calories</p>
       </div>
@@ -30,7 +30,7 @@
       <div class="text-sm ml-2 ">
         <p><%= day.dinner.cook_time%> mins </p>
       </div>
-      <%= image_tag 'calorie.svg', class: "calorie ml-3 "%>
+        <i class="fas fa-utensils ml-3"></i>
       <div class="text-sm  ml-2">
        <p> <%= day.dinner.cal_per_serving%> calories</p>
       </div>
