logo change+text

--- a/app/views/users/recipes/show.html.erb
+++ b/app/views/users/recipes/show.html.erb
@@ -20,7 +20,7 @@
           <li><%= @recipe.total_cal%> calories</li>
           <li><%= @recipe.total_prot%> protéines</li>
           <li><%= @recipe.total_carbs%> glucides</li>
-          <li><%= @recipe.total_fat%> lipides 
+          <li><%= @recipe.total_fat%> lipides</li>
         
         <div class="text-2xl md:text-xl font-light leading-normal mt-10">
         <p>Ingrédients :</p>
