--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -2,10 +2,10 @@
 	<div class="md:mb-2 mb-0">
     <div class="flex items-center ml-3 mt-2">
       <%=link_to root_path do%>
-    	<%= image_tag("logo_meal.png", size: "48x48") %>
+    	<%= image_tag("logogo.svg", size: "48x48") %>
       <% end %>
       <%=link_to root_path do%>
-      <h1 class="font-semibold select-none"><span class="text-primary-500">M</span>ealories</h1>
+      <h1 class="font-semibold select-none"><span class="text-primary-500 ml-1 text-lg">Meal</span>ories</h1>
       <%end%>
     </div>
   </div>
