--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -41,6 +41,9 @@
             </div>
 
             <% end %>
+            <div class="mt-6 text-sm ml-1">
+              <%= render "devise/shared/links" %>
+            </div>
           </div>
         </div>
       </div>
