--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -92,3 +92,177 @@ input[type='number']::-webkit-inner-spin-button,
       outline: none !important;
   }
 // Modal days generation end 
+
+
+.form { 
+  border-radius: 20px;
+  box-sizing: border-box;
+  height: 800px;
+  padding: 40px;
+  width: 400px;
+}
+
+.title {
+  color: black;
+  font-family: sans-serif;
+  font-size: 36px;
+  font-weight: 600;
+  margin: 0;
+}
+
+.subtitle {
+  color: black;
+  font-family: sans-serif;
+  font-size: 16px;
+  font-weight: 600;
+  margin-top: 10px;
+}
+
+.input-container {
+  height: 50px;
+  position: relative;
+  width: 100%;
+}
+
+.ic1 {
+  margin-top: 40px;
+}
+
+.ic2 {
+  margin-top: 35px;
+}
+
+.input {
+  background-color: white;
+  border-radius: 12px;
+  border: 0;
+  box-sizing: border-box;
+  color: black;
+  font-size: 18px;
+  height: 100%;
+  outline: 0;
+  padding: 4px 20px 0;
+  width: 100%;
+  transition: box-shadow .2s ease-in-out;
+  box-shadow: inset 0px 0px 0px 0px transparent;
+}
+
+.input:focus {
+  box-shadow: inset 0px 0px 0px 2px #6dd5be;
+}
+
+.cut {
+  border-radius: 10px;
+  height: 20px;
+  left: 20px;
+  position: absolute;
+  top: -20px;
+  transform: translateY(0);
+  transition: transform 200ms;
+  width: 76px;
+}
+
+.cut-short {
+  width: 50px;
+}
+
+.cut-large {
+  width: 100px;
+}
+
+
+.input:focus ~ .cut,
+.input:not(:placeholder-shown) ~ .cut {
+  transform: translateY(8px);
+}
+
+.placeholder {
+  color: lightgray;
+  font-family: sans-serif;
+  left: 20px;
+  line-height: 14px;
+  pointer-events: none;
+  position: absolute;
+  transform-origin: 0 50%;
+  transition: transform 200ms, color 200ms;
+  top: 20px;
+}
+
+.input:focus ~ .placeholder,
+.input:not(:placeholder-shown) ~ .placeholder {
+  transform: translateY(-30px) translateX(10px) scale(0.75);
+}
+
+.input:not(:placeholder-shown) ~ .placeholder {
+  color: lightgray;
+}
+
+.input:focus ~ .placeholder {
+  color: #31ab90;
+}
+
+.submit {
+  background-color: #6dd5be;
+  border-radius: 12px;
+  border: 0;
+  box-sizing: border-box;
+  color: #eee;
+  cursor: pointer;
+  font-size: 18px;
+  height: 50px;
+  margin-top: 38px;
+  outline: 0;
+  text-align: center;
+  width: 100%;
+  transition: background-color .2s ease-in-out, box-shadow .2s ease-in-out;
+  box-shadow: inset 0px 0px 0px 0px transparent;
+}
+
+.submit:active {
+  background-color: #31ab90;
+}
+
+.submit:hover {
+  background-color: #6dd5be;
+  box-shadow: inset 0px 0px 0px 2px #ffffff;
+}
+
+.submit:focus {
+  background-color: #31ab90;
+  box-shadow: inset 0px 0px 0px 2px #ffffff;
+}
+
+
+::-webkit-input-placeholder { /* Edge */
+  color: lightgray;
+  opacity: 0;
+  transition: opacity .2s ease-in-out;
+}
+
+:-ms-input-placeholder { /* Internet Explorer 10-11 */
+  color: lightgray;
+  opacity: 0;
+  transition: opacity .2s ease-in-out;
+}
+
+::placeholder {
+  color: #31ab90;
+  opacity: 0;
+  transition: opacity .2s ease-in-out;
+}
+
+input:focus::-webkit-input-placeholder { /* Edge */
+  opacity: 1;
+}
+
+input:focus:-ms-input-placeholder { /* Internet Explorer 10-11 */
+  opacity: 1;
+}
+
+input:focus::placeholder {
+  opacity: 1;
+}
+
+.input-group.has-error .form-control {   
+    box-shadow: inset 0px 0px 0px 2px  #ff3355;
+}
