updated login, password forms

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -6,7 +6,7 @@
       Inscription
     </h2>
     <p class="mt-2 text-center text-sm text-gray-600 max-w">
-      L'équipe Mealories est heureuse de vous accueillir !
+      L'équipe Mealories est heureuse de t'accueillir !
       </a>
     </p>
   </div>
