--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,29 +1,44 @@
-      <!-------left-page----->
-    <div class="container  h-full p-2 flex flex-row justify-center lg:justify-between items-center ">
-      <div class="left-page hidden md:hidden lg:block lg:ml-20">
-          <%= image_tag 'forgot_password.svg', class: "ramen"%>
-      </div>
+<div class="min-h-80 my-auto flex flex-col justify-center py-12 sm:px-6 lg:px-8 max-h-90">
+  <div class="sm:mx-auto sm:w-full sm:max-w-md">
 
-    <!-------right-page----->
-      <div class="right-page ">
-      <div class=" p-12 form_wrapper max-w-sm mx-auto shadow-2xl  bg-primary-200 rounded-lg ">
-        <h1 class="text-4xl	 font-bold text-center"> <span class="jumbo-header text-lb:text-6xl m-auto ">Mot de passe oublié</span></h1>    
-
-            <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
-            <%= render "devise/shared/error_messages", resource: resource %>
-            <div class="field mt-10">
-                <%= f.email_field :email, autofocus: true, placeholder: 'Email', autocomplete: "email", required: true, class:"block w-full p-3 mt-2   bg-gray-100 border-gray-100 rounded-xl placeholder-gray-500 focus:outline-none focus:ring-2 focus:ring-primary-500" %>
-                <br />
-              </div>
-
-              <div class="actions flex justify-center">
-                <%= f.submit "Envoyez", class:" block w-full mt-5 bg-primary-500 hover:bg-primary-400 py-4 px-6 block rounded-xl text-white cursor-pointer font-black" %>
-              </div>
-            <% end %>
-            <div class="mt-6 text-sm ml-1">
-              <%= render "devise/shared/links"%>
-            </div>
-          </div>
+    <%= image_tag 'logogo', class:"mx-auto h-12 w-auto" %>
+    <h2 class="mt-6 text-center text-3xl font-extrabold text-gray-900">
+      Mot de passe oublié ?
+    </h2>
+    <p class="mt-2 text-center text-sm text-gray-600 max-w">
+      On ne te jugera pas !
+      </a>
+    </p>
+  </div>
+  <div class="mt-8 sm:mx-auto sm:w-full sm:max-w-md">
+    <div class="bg-gray-100 py-8 px-4 shadow sm:rounded-3xl sm:px-10">
+      <%= form_for(resource, as: resource_name, url: password_path(resource_name), class:"form-wizard js-form-wizard form-y-6", html: { method: :post }) do |f| %>
+      <div class="input-container ic2">
+        <%= f.email_field :email, autofocus: true, placeholder: 'Email', autocomplete: "", required: true, class:"input form-control js-form-control" %>
+        <div class="absolute inset-y-0 right-0 pr-3 pt-2 flex items-center pointer-events-none">
+          <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 64 80" x="0px" y="0px"
+            class="h-7 w-7 text-gray-300">
+            <g data-name="Layer 16">
+              <path
+                d="M58,11.42H6a3.5,3.5,0,0,0-3.5,3.5V49.08A3.5,3.5,0,0,0,6,52.58H58a3.5,3.5,0,0,0,3.5-3.5V14.92A3.5,3.5,0,0,0,58,11.42Zm.5,37.66a.5.5,0,0,1-.5.5H6a.5.5,0,0,1-.5-.5V14.92a.5.5,0,0,1,.5-.5H58a.5.5,0,0,1,.5.5Z" />
+              <path
+                d="M53.57,17.93a1.5,1.5,0,0,0-2.12-.14L35.73,31.48,32,34.73l-3.73-3.25L12.55,17.79a1.5,1.5,0,0,0-2,2.26L25,32.6,11,43.86a1.5,1.5,0,0,0,1.88,2.34L27.28,34.6c5.71,4.83,3.74,4.81,9.44,0L51.17,46.2a1.5,1.5,0,0,0,1.88-2.34L39,32.6,53.42,20.05A1.5,1.5,0,0,0,53.57,17.93Z" />
+            </g>
+          </svg>
         </div>
+        <div class="cut cut-short bg-gray-100"></div>
+        <label for="email" class="placeholder">Email</>
       </div>
 
+      <div class="text-center text-gray-500 mt-4">
+        <%= render "devise/shared/links" %>
+      </div>
+
+      <div>
+        <%= f.submit "Envoyer", class:"focus:outline-none block w-full mt-5 bg-primary-500 hover:bg-primary-400 py-4 px-6 block rounded-xl text-white cursor-pointer font-black" %>
+      </div>
+
+      <% end %>
+    </div>
+  </div>
+</div>
