--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -93,30 +93,7 @@ input[type='number']::-webkit-inner-spin-button,
   }
 // Modal days generation end 
 
-
-.form { 
-  border-radius: 20px;
-  box-sizing: border-box;
-  height: 800px;
-  padding: 40px;
-  width: 400px;
-}
-
-.title {
-  color: black;
-  font-family: sans-serif;
-  font-size: 36px;
-  font-weight: 600;
-  margin: 0;
-}
-
-.subtitle {
-  color: black;
-  font-family: sans-serif;
-  font-size: 16px;
-  font-weight: 600;
-  margin-top: 10px;
-}
+// Forms
 
 .input-container {
   height: 50px;
@@ -170,14 +147,13 @@ input[type='number']::-webkit-inner-spin-button,
   width: 100px;
 }
 
-
 .input:focus ~ .cut,
 .input:not(:placeholder-shown) ~ .cut {
   transform: translateY(8px);
 }
 
 .placeholder {
-  color: lightgray;
+  color: #9CA3AF;
   font-family: sans-serif;
   left: 20px;
   line-height: 14px;
@@ -194,7 +170,7 @@ input[type='number']::-webkit-inner-spin-button,
 }
 
 .input:not(:placeholder-shown) ~ .placeholder {
-  color: lightgray;
+  color: #9CA3AF;
 }
 
 .input:focus ~ .placeholder {
