--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -15,7 +15,7 @@
       <%= form_for(resource, as: resource_name, url: registration_path(resource_name), class:"form-wizard js-form-wizard form-y-6") do |f| %>
 
       <div class="input-container ic2">
-        <%= f.email_field :email, autofocus: true, placeholder: 'Email', autocomplete: "", required: true, class:"input form-control js-form-control" %>
+        <%= f.email_field :email, autofocus: true, placeholder: '', autocomplete: "", required: true, class:"input form-control js-form-control" %>
         <div class="absolute inset-y-0 right-0 pr-3 pt-2 flex items-center pointer-events-none">
           <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 64 80" x="0px" y="0px"
             class="h-7 w-7 text-gray-300">
@@ -32,7 +32,7 @@
       </div>
 
       <div class="input-container mt-6">
-        <%= f.text_field :first_name, autofocus: true, placeholder: 'Prénom',  required: true, class:"input form-control js-form-control"%>
+        <%= f.text_field :first_name, autofocus: true, placeholder: '',  required: true, class:"input form-control js-form-control"%>
         <div class="cut bg-gray-100"></div>
         <div class="absolute inset-y-0 right-0 -mr-1 pt-5 flex items-center pointer-events-none">
           <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 64 80" x="0px" y="0px"
@@ -46,7 +46,7 @@
       </div>
 
       <div class="input-container ic2">
-        <%= f.text_field :last_name, autofocus: true, placeholder: 'Nom',  required: true, class:"input form-control js-form-control"%>
+        <%= f.text_field :last_name, autofocus: true, placeholder: '',  required: true, class:"input form-control js-form-control"%>
         <div class="absolute inset-y-0 right-0 -mr-1 pt-5 flex items-center pointer-events-none">
           <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 64 80" x="0px" y="0px"
             class="h-11 w-11 text-gray-300">
@@ -60,7 +60,7 @@
       </div>
       <div class="input-group js-input-group">
         <div class="input-container ic2">
-          <%= f.password_field :password, placeholder: 'Mot de passe', autocomplete: "new-password", required: true, class:"input form-control js-form-control" %>
+          <%= f.password_field :password, placeholder: '', autocomplete: "new-password", required: true, class:"input form-control js-form-control" %>
           <div class="absolute inset-y-0 right-0 pr-4 pb-2 flex items-center pointer-events-none">
           <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 64 80" x="0px" y="0px"
             class="h-11 w-11 text-gray-300">
@@ -78,7 +78,7 @@
         </div>
         <div class="input-group js-input-group">
           <div class="input-container ic1">
-            <%= f.password_field :password_confirmation, placeholder: 'Confirmer le mot de passe', autocomplete: "new-password", required: true, class:"input form-control js-form-control" %>
+            <%= f.password_field :password_confirmation, placeholder: '', autocomplete: "new-password", required: true, class:"input form-control js-form-control" %>
              <div class="absolute inset-y-0 right-0 pr-4 pb-2 flex items-center pointer-events-none">
           <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 64 80" x="0px" y="0px"
             class="h-11 w-11 text-gray-300">
@@ -97,7 +97,7 @@
         </div>
 
         <div>
-          <%= f.submit "Valider", class:"focus:outline-none block w-full mt-5 bg-primary-500 hover:bg-primary-400 py-4 px-6 block rounded-xl text-white cursor-pointer font-black" %>
+          <%= f.submit "Valider", class:"submit" %>
         </div>
 
         <% end %>
