--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -35,7 +35,7 @@
 			
 					</li>
 					<li class="sm:mr-8 mt-4 -mr-3">
-					<%= link_to "Déconnexion", destroy_user_session_path, method: "delete", class:"bg-primary-600 font-bold hover:bg-primary-800 rounded-full py-2 px-4 text-base no-underline text-white hover:text-blue-dark ml-2" %>
+					<%= link_to "Déconnexion", destroy_user_session_path, method: "delete", class:"submit font-semibold py-2 px-4 ml-2 mt-2" %>
 					</li>
 				</ul>
 			</div>
@@ -53,7 +53,7 @@
 					</li>
 
 					<li class="sm:mr-8 mt-4 -mr-3">
-					<%= link_to "Inscription", new_user_registration_path, class:"font-bold bg-primary-600 hover:bg-primary-800 rounded-full py-2 px-4 text-base no-underline text-white hover:text-blue-dark ml-2" %>
+					<%= link_to "Inscription", new_user_registration_path, class:"submit font-semibold py-2 px-4 ml-2 mt-2" %>
 					</li>
 				</ul>
 			</div>
