--- a/app/views/users/users/show.html.erb
+++ b/app/views/users/users/show.html.erb
@@ -1,44 +1,65 @@
-<div class="container mx-auto mb-auto">
   <%= render 'welcome'%>  
 
-  <div class="middle-page flex items-center justify-evenly h-full">
-
-      <!-------left-page----->
-    <div class="hidden md:contents md:mr-10 m-auto">
-    <%= image_tag("personal_data_.svg", size: "325x272", class:"data") %>
-    </div>
-
-      <!-------right-page----->
-    <div class="text-gray-700 bg-gray-100 shadow-lg rounded-md relative -mt-20 md:mt-0">
-      <div class="lg:w-full mx-5 md:mx-auto">
-        <div class="flex flex-col sm:flex-row">
-              <!----card-left-->
-          <div class="w-1/3 md:w-1/2 text-center sm:pr-8 sm:py-8 ml-24 md:ml-0">
-            <div class="flex flex-col items-center justify-center">
-              <h2 class=" mt-4 text-gray-900 text-lg"><span class="text-primary-500 font-bold uppercase"><%= @user.last_name %></span> <%= @user.first_name%></h2>
-              <div class="w-12 h-1 bg-yellow-500 rounded mt-2 mb-4"></div>
+<div class="h-screen flex overflow-hidden">
   
-              <ul class="text-base text-gray-600">
-              <li><span class="font-bold">Sexe :</span><%= @user.gender%></li>
-              <li><span class="font-bold">Âge :</span><%= @user.age%></li>
-              <li><span class="font-bold">E-mail :</span><%= @user.email%></li>
-              </ul>
-              <%= link_to 'Modifier infos',edit_user_path, class:"text-white  bg-primary-600 border border-solid border-primary-500 hover:text-primary-500 hover:bg-white active:bg-primary-600 font-bold uppercase text-xs md:text-sm px-1 py-1 md:mt-3 rounded outline-none focus:outline-none mr-1 mb-1" ,type:"button", style:"transition: all .15s ease" %>
+  <!-- Static sidebar for desktop -->
+  <div class="flex shrink-1 md:flex-shrink-0">
+    <div class="flex flex-col w-64">
 
-            </div>
-          </div>
-          <!----card-right-->
-          <div class="sm:w-2/3 sm:pl-8 sm:py-8 sm:border-l border-gray-300 sm:border-t-0  border-t mt-4 pt-4 sm:mt-0 text-center sm:text-left bg-gray-100 rounded-md">
-            <ul class="leading-relaxed text-lg mb-4">
-              <li><span class="font-semibold tracking-wide">Taille : </span><%= @user.height_in_cms %> cm</li>
-              <li><span class="font-semibold tracking-wide">Poids : </span><%= @user.weight_in_kgs %> kg</li>
-              <li><span class="font-semibold tracking-wide">Activité : </span><%= @user.activity_level_title %></li>
-              <li><span class="font-semibold tracking-wide">Objectif : </span><%= @user.objective_title %></li>
-              <li><span class="font-semibold tracking-wide">Besoin journalier : </span><%= @user.daily_cal.to_d %> kcal</li>           
-            </ul>
-           </div>
+      <div class="flex flex-col flex-grow border-r border-gray-200 pt-5 pb-4 bg-white overflow-y-auto">
+        
+        <div class="mt-5 flex-grow flex flex-col">
+          <nav class="flex-1 px-2 bg-white space-y-1">
+
+            <a href="#" class="bg-gray-100 text-gray-900 group flex items-center px-2 py-2 text-sm font-medium rounded-md">        
+              <svg class="text-gray-500 mr-3 h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 12l2-2m0 0l7-7 7 7M5 10v10a1 1 0 001 1h3m10-11l2 2m-2-2v10a1 1 0 01-1 1h-3m-6 0a1 1 0 001-1v-4a1 1 0 011-1h2a1 1 0 011 1v4a1 1 0 001 1m-6 0h6" />
+              </svg>
+              Tableau de bord
+            </a>
+           
+        
+            <a href="#" class="text-gray-600 hover:bg-gray-50 hover:text-gray-900 group flex items-center px-2 py-2 text-sm font-medium rounded-md">
+              <svg class="text-gray-400 group-hover:text-gray-500 mr-3 h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 7V3m8 4V3m-9 8h10M5 21h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v12a2 2 0 002 2z" />
+              </svg>
+              Mes programmes
+            </a>
+
+            <a href="#" class="text-gray-600 hover:bg-gray-50 hover:text-gray-900 group flex items-center px-2 py-2 text-sm font-medium rounded-md">
+          
+              <svg class="text-gray-400 group-hover:text-gray-500 mr-3 h-6 w-6"xmlns:x="http://ns.adobe.com/Extensibility/1.0/" xmlns:i="http://ns.adobe.com/AdobeIllustrator/10.0/" xmlns:graph="http://ns.adobe.com/Graphs/1.0/" fill="#9CA3AF" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" x="0px" y="0px" viewBox="0 0 100 125" style="enable-background:new 0 0 100 100;" xml:space="preserve"><switch><foreignObject requiredExtensions="http://ns.adobe.com/AdobeIllustrator/10.0/" x="0" y="0" width="1" height="1"/><g i:extraneous="self"><g><path d="M34.7,68.9l5.8-5.8c-10.5-0.6-18.9-9.3-18.9-20c0-11.1,9-20,20-20c10.7,0,19.4,8.3,20,18.9l9.5-9.5     c-0.7-1.9-1.6-3.8-2.6-5.5l4.5-5.8c0.5-0.7,0.5-1.6-0.1-2.2l-7.1-7.1c-0.6-0.6-1.5-0.7-2.2-0.1l-5.8,4.5     c-2.7-1.6-5.6-2.8-8.6-3.6l-0.9-7.3C48.2,4.6,47.5,4,46.7,4h-10c-0.8,0-1.5,0.6-1.7,1.5l-0.9,7.3c-3.1,0.8-5.9,2-8.6,3.6     l-5.8-4.5c-0.7-0.5-1.6-0.5-2.2,0.1L10.4,19c-0.6,0.6-0.6,1.5-0.1,2.2l4.5,5.8c-1.6,2.6-2.8,5.5-3.6,8.6L4,36.5     c-0.8,0.1-1.5,0.8-1.5,1.6v10c0,0.8,0.6,1.5,1.5,1.7l7.2,0.9c0.8,3.1,2,5.9,3.6,8.6l-4.5,5.8c-0.5,0.7-0.5,1.6,0.1,2.2l7.1,7     c0.6,0.6,1.5,0.7,2.2,0.2l5.8-4.5c1.8,1.1,3.8,2.1,5.9,2.8C32.4,71.4,33.5,70.2,34.7,68.9z"/><circle cx="41.6" cy="43.1" r="12.2"/><path d="M31.4,88.5l-1.3,5.7c-0.2,1.1,0.7,2,1.8,1.8l5.7-1.3c4.4-1,8.5-2.9,12-5.6L37,76.5C34.3,80,32.3,84.1,31.4,88.5z"/><rect x="41.7" y="53.7" transform="matrix(0.7071 -0.7071 0.7071 0.7071 -25.9714 63.0907)" width="43" height="18.3"/><path d="M96.4,37.6l-8-8c-1.4-1.4-3.5-1.5-4.7-0.2l-7.1,7.1l13,13l7.1-7.1C97.9,41.1,97.8,39,96.4,37.6z"/></g></g></switch></svg>
+              Mettre à jour mon profil
+            </a>
+
+            <a href="#" class="text-gray-600 hover:bg-gray-50 hover:text-gray-900 group flex items-center px-2 py-2 text-sm font-medium rounded-md">
+              <!-- Heroicon name: chart-bar -->
+              <svg class="text-gray-400 group-hover:text-gray-500 mr-3 h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 19v-6a2 2 0 00-2-2H5a2 2 0 00-2 2v6a2 2 0 002 2h2a2 2 0 002-2zm0 0V9a2 2 0 012-2h2a2 2 0 012 2v10m-6 0a2 2 0 002 2h2a2 2 0 002-2m0 0V5a2 2 0 012-2h2a2 2 0 012 2v14a2 2 0 01-2 2h-2a2 2 0 01-2-2z" />
+              </svg>
+              Admin
+            </a>
+          </nav>
         </div>
       </div>
     </div>
+  </div>
+
+  <div class="flex flex-col w-0 flex-1 overflow-hidden">  
+
+    <main class="flex-1 relative overflow-y-auto focus:outline-none" tabindex="0">
+      <div class="py-6">
+        <div class="max-w-7xl mx-auto px-4 sm:px-6 md:px-8">
+          <h1 class="text-2xl font-semibold text-gray-900">Dashboard</h1>
+        </div>
+        <div class="max-w-7xl mx-auto px-4 sm:px-6 md:px-8">
+          <!-- Replace with your content -->
+          <div class="py-4">
+            <div class="border-4 border-dashed border-gray-200 rounded-lg h-96"></div>
+          </div>
+          <!-- /End replace -->
+        </div>
+      </div>
+    </main>
   </div>
 </div>
