fixed svgs and partials

--- a/app/views/users/users/edit.html.erb
+++ b/app/views/users/users/edit.html.erb
@@ -1,2 +1,6 @@
- <%= render 'sidebar' %>
-  <%= render 'form' %>
+  <%= render 'welcome'%>
+
+ <div class="h-screen flex overflow-hidden">
+   <%= render 'sidebar' %>
+   <%= render 'form' %>
+ </div>
