fixed some fonts on footer & navbar

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,8 +1,8 @@
 <footer class="footer md:text-base md:justify-between md:h-20 py-8">
 
   <p></p>
-  <p class="ml-48">Made with <span style="color:red"><i class="fas fa-heart"></i></span> by les Perruches</p>
+  <p class="ml-48 text-gray-700">Made with <span style="color:red"><i class="fas fa-heart"></i></span> by les Perruches</p>
 
-  <p>Mealories © 2020</p>
+  <p class="text-gray-700">Mealories © 2020</p>
 
 </footer>
