--- a/app/views/users/users/_welcome.html.erb
+++ b/app/views/users/users/_welcome.html.erb
@@ -1,18 +1,8 @@
  <div
-  class="flex md:flex-row md:items-center justify-around mt-24 md:mt-32 container border-primary-200 border-b-4">
+  class="flex md:flex-row md:items-center justify-around mt-24 md:mt-32 container border-primary-100 border-b-4 min-w-full">
 
-  <div class="text-left flex flex-col md:text-left  mt-5">
-    <h1 class="text-3xl md:text-4xl lg-text-4xl font-serif font-semibold ">Bonjour <span
-        class="text-primary-500 text-4xl md:text-5xl font-bold ml-3 "><%= current_user.first_name %></span></h1>
-    <p class="text-xl md:text-2xl lg:text-2xl font-semibold mt-5 ml-10">Ton espace utilisateur</p>
+  <div class="text-left flex flex-col md:text-left  mt-5">    
   </div>
 
-  <!-- buttons -->
-  <%= render 'users/users/buttons'%>
-  <div class=" mt-6 md:mb-0 flex items-center">
-  </div>
+  <!-- buttons -->  
 </div>
-
-
-
-<%= javascript_pack_tag 'new_plan' %>
