--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -5,7 +5,7 @@
     	<%= image_tag("logogo.svg", size: "48x48") %>
       <% end %>
       <%=link_to root_path do%>
-      <h1 class="font-semibold select-none text-2xl mt-3 ml-2 text-gray-700"><span class="text-primary-500 ml-2 text-3xl">Meal</span><span class="ml-0.5">ories</span></h1>
+      <h1 class="font-semibold select-none text-xl mt-3 ml-2 text-gray-700"><span class="text-primary-500 ml-2 text-3xl">Meal</span><span class="mb-5">ories</span></h1>
       <%end%>
     </div>
   </div>
