--- a/app/views/users/users/_sidebar.html.erb
+++ b/app/views/users/users/_sidebar.html.erb
@@ -8,7 +8,6 @@
             <nav class="flex-1 px-2 space-y-1">
 
 
-
               <%= link_to user_path(current_user), class:"bg-gray-100 text-gray-900 group flex items-center px-2 py-2 text-sm font-medium rounded-md" do %>
               <svg class="text-gray-500 mr-3 h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
                 stroke="currentColor" aria-hidden="true">
@@ -17,9 +16,8 @@
               </svg>
               Tableau de bord
               <% end %>
-
             
-              <%= link_to plans_path, class:"text-gray-600 hover:bg-primary-800 hover:text-white group flex items-center px-2 py-2 text-sm font-medium rounded-md" do %>
+              <%= link_to new_plan_path, class:"text-gray-600 hover:bg-primary-800 hover:text-white group flex items-center px-2 py-2 text-sm font-medium rounded-md" do %>
              <svg fill="none" class="text-gray-400 fill-current group-hover:text-white mr-3 h-6 w-6" xmlns:x="http://ns.adobe.com/Extensibility/1.0/" xmlns:i="http://ns.adobe.com/AdobeIllustrator/10.0/" xmlns:graph="http://ns.adobe.com/Graphs/1.0/" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" x="0px" y="0px" viewBox="0 0 100 125" style="enable-background:new 0 0 100 100;" xml:space="preserve"><switch><foreignObject requiredExtensions="http://ns.adobe.com/AdobeIllustrator/10.0/" x="0" y="0" width="1" height="1"/><g i:extraneous="self"><g><path d="M70.8,44.7H55.3V29.2c0-2.9-2.4-5.3-5.3-5.3c-2.9,0-5.3,2.4-5.3,5.3v15.5H29.2c-2.9,0-5.3,2.4-5.3,5.3     c0,1.5,0.6,2.8,1.5,3.7c1,1,2.3,1.5,3.7,1.5h15.5v15.5c0,1.5,0.6,2.8,1.5,3.7c1,1,2.3,1.5,3.7,1.5c2.9,0,5.3-2.4,5.3-5.3V55.3     h15.5c2.9,0,5.3-2.4,5.3-5.3C76,47.1,73.7,44.7,70.8,44.7z"/><path d="M50,2.5C23.8,2.5,2.5,23.8,2.5,50S23.8,97.5,50,97.5c26.2,0,47.5-21.3,47.5-47.5S76.2,2.5,50,2.5z M50,86.9     c-20.4,0-36.9-16.5-36.9-36.9S29.6,13.1,50,13.1S86.9,29.6,86.9,50S70.4,86.9,50,86.9z"/></g></g></switch></svg>
               Nouveau programme
               <% end %>
@@ -32,9 +30,6 @@
               </svg>
               Mes programmes
               <% end %>
-
-
-
 
               <%= link_to edit_user_path(current_user), class:"text-gray-600 hover:bg-primary-800 hover:text-white group flex items-center px-2 py-2 text-sm font-medium rounded-md" do %>
               <svg class="text-gray-400 fill-current group-hover:text-white mr-3 h-6 w-6"
