--- a/app/views/users/users/_welcome.html.erb
+++ b/app/views/users/users/_welcome.html.erb
@@ -1,5 +1,5 @@
  <div
-  class="flex md:flex-row md:items-center justify-around mt-24 md:mt-32 container border-primary-100 border-b-4 min-w-full">
+  class="flex md:flex-row md:items-center justify-around mt-24 md:mt-32 container border-gray-200 border-b-2 min-w-full">
 
   <div class="text-left flex flex-col md:text-left  mt-5">    
   </div>
