js buttons increments/decrements on new plan

--- a/app/views/users/plans/show.html.erb
+++ b/app/views/users/plans/show.html.erb
@@ -1,11 +1,1 @@
-<div class="container mx-auto mb-auto">
-
-        <!--partial for days start-->
-  <%= render "users/plans/numberofdays"%>
-       
-        <!--menu cards start-->
-  <div id="day-recipe" class="flex flex-col md:flex-row items-center justify-center ml-5 mt-16 mb-5">  
-    <%= render "users/days/show"%>
-  </div>  
-
-</div>
+<%= render 'users/plans/show' %>
