--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -20,8 +20,8 @@
         <!-- When user is connected -->
     <% if current_user %>
     <div class="w-full hidden sm:flex-grow sm:flex-row-reverse sm:flex sm:items-center sm:w-auto sm:pt-0 relative pr-8 sm:pr-0 bg-gradient-to-r from-primary-400 to-primary-100 sm:bg-transparent rounded-3xl sm:rounded-none sm:bg-gradient-to-r sm:from-transparent sm:to-transparent" id="nav-content">
-			<div class="nav-links sm:flex sm:-mr-10">
-				<ul class="list-reset sm:flex justify-end flex-1 items-center sm:mr-5">
+			<div class="nav-links sm:flex">
+				<ul class="list-reset sm:flex justify-end flex-1 items-center">
 					<li class="sm:mr-8 mt-4 font-semibold highlight text-gray-900">
 						<%= link_to "Menu", new_plan_path, class:"text-lg"%>
 					</li>
