--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,4 +1,4 @@
-<footer class="footer md:text-base md:justify-between md:h-20 py-8">
+<footer class="footer md:text-base md:justify-between md:h-20">
 
   <p></p>
   <p class="ml-48 text-gray-700">Made with <span style="color:red"><i class="fas fa-heart"></i></span> by les Perruches</p>
