--- a/app/views/users/days/_show.html.erb
+++ b/app/views/users/days/_show.html.erb
@@ -26,10 +26,15 @@
           class="hidden animated fadeIn fixed inset-0 overflow-y-auto flex items-center justify-center "
           style="z-index: 9999;">
           <!-- Modal Inner Container -->
-            <div class="w-8/12 relative">
+            <div class="w-8/12 relative static">
             <!-- Modal Card -->
               <div class="m-1 bg-gray-100  rounded-lg shadow">
                 <div class="m-auto max-w-6xl p-12">
+                  <div class="absolute top-5 right-5">
+                  <button data-action="click->modal#close">
+                    <i class="fas fa-times fa-lg"></i>
+                    </button>
+                  </div>
                   <div class="text-5xl text-gray-900 font-bold mb-14 text-center ">
                    <%= @day.lunch.title %>
                   </div>
@@ -63,7 +68,7 @@
             </div>
             </div>
             <div class=" max-w-lg   lg:pl-24 ">
-                <%= image_tag @day.lunch.image_url, style:"box-shadow: 0 4px 4px rgba(0,0,0,0.25), 0 4px 4px rgba(0,0,0,0.22); border-radius:2px;"%>
+                <%= image_tag @day.lunch.image_url, style:"box-shadow: 0 4px 4px rgba(0,0,0,0.20), 0 4px 4px rgba(0,0,0,0.22); border-radius:2px;"%>
                </div>
               </div>
                   </div>
