--- a/app/views/users/users/show.html.erb
+++ b/app/views/users/users/show.html.erb
@@ -10,7 +10,7 @@
         <div class="py-6">
           <div class="max-w-7xl mx-auto px-4 sm:px-6 md:px-8">
             <h1 class="text-2xl font-semibold text-gray-900">Bonjour <span
-                class="text-primary-800"><%= current_user.first_name %></h1>
+                class="text-primary-800"><%= current_user.first_name.capitalize %></h1>
 
           </div>
           <div class="max-w-7xl mx-auto px-4 sm:px-6 md:px-8">
