--- a/app/views/static/index.html.erb
+++ b/app/views/static/index.html.erb
@@ -1,4 +1,4 @@
-<div class="container mx-auto mb-auto relative min-h-full">
+<div class="container mx-auto relative min-h-full">
 
   <!--Lead+main img-->
   <div class="top-page flex flex-row items-center justify-around">
@@ -21,15 +21,65 @@
   </div>
 
   <!--Timeline-->
-  <div class="flex flex-wrap justify-center">
-    <p>Renseigne tes informations</p>
+  <div class="mt-14">
+    <div class="flex flex-wrap justify-center">
+      <p>Renseigne tes informations</p>
+    </div>
+    <div class="flex justify-center">
+      <%= image_tag 'timeline-web.svg', class: "tlweb flex"%>
+    </div>
+    <div class="flex justify-around md:justify-between lg:justify-around  mb-5">
+      <p class="md:ml-28 lg:-ml-16 xl:ml-0 2xl:ml-28">Inscris-toi</p>
+      <p class="content md:hidden"></p>
+      <p class="md:mr-20 lg:-mr-24 xl:-mr-10 2xl:mr-20">On prépare ton menu !</p>
+    </div>
   </div>
-  <div class="flex justify-center">
-    <%= image_tag 'timeline-web.svg', class: "tlweb flex"%>
+  <!--faq start-->
+  <h1 class="text-2xl font-bold text-center my-14">Manger intelligemment n'a jamais aussi facile</h1>
+    <div class="faq px-2 py-12 text-gray-700 body-font">
+    <div class="flex items-center lg:w-3/5 mx-auto border-b pb-10 mb-10 border-gray-200 sm:flex-row flex-col">
+      <div class="sm:w-32 sm:h-32 h-20 w-20 sm:mr-10 inline-flex items-center justify-center rounded-full bg-teal-100 text-teal-500 flex-shrink-0">
+        <i class="fas fa-heartbeat fa-3x" style="color:red;"></i>
+      </div>
+      <div class="flex-grow sm:text-left text-center mt-6 sm:mt-0">
+        <h2 class="text-gray-900 text-lg title-font font-medium mb-2">Prenez-soin de votre santé</h2>
+        <p class="leading-relaxed text-base">Choisissez vos menus en fonction de ce qui s'adapte à votre train de vie.</p>
+        <a class="mt-3 text-teal-500 inline-flex items-center">Learn More
+          <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-2" viewBox="0 0 24 24">
+            <path d="M5 12h14M12 5l7 7-7 7"></path>
+          </svg>
+        </a>
+      </div>
+    </div>
+    <div class="flex items-center lg:w-3/5 mx-auto border-b pb-10 mb-10 border-gray-200 sm:flex-row flex-col">
+      <div class="flex-grow sm:text-left text-center mt-6 sm:mt-0">
+        <h2 class="text-gray-900 text-lg title-font font-medium mb-2">Plus simple</h2>
+        <p class="leading-relaxed text-base">Gagnez du temps en plannifiant vos menus.</p>
+        <a class="mt-3 text-teal-500 inline-flex items-center">Learn More
+          <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-2" viewBox="0 0 24 24">
+            <path d="M5 12h14M12 5l7 7-7 7"></path>
+          </svg>
+        </a>
+      </div>
+      <div class="sm:w-32 sm:order-none order-first sm:h-32 h-20 w-20 sm:ml-10 inline-flex items-center justify-center rounded-full bg-teal-100 text-teal-500 flex-shrink-0">
+        <i class="fas fa-user-clock fa-3x" style="color:green;"></i>                   
+      </div>
+    </div>
+    <div class="flex items-center lg:w-3/5 mx-auto sm:flex-row flex-col">
+      <div class="sm:w-32 sm:h-32 h-20 w-20 sm:mr-10 inline-flex items-center justify-center rounded-full bg-teal-100 text-teal-500 flex-shrink-0">
+        <i class="fas fa-carrot fa-3x" style="color:orange;"></i>
+      </div>
+      <div class="flex-grow sm:text-left text-center mt-6 sm:mt-0">
+        <h2 class="text-gray-900 text-lg title-font font-medium mb-2">Différents régimes</h2>
+        <p class="leading-relaxed text-base">Différents régimes alimentaires sont disponibles en fonction de vos préférences.</p>
+        <a class="mt-3 text-teal-500 inline-flex items-center">Learn More
+          <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-2" viewBox="0 0 24 24">
+            <path d="M5 12h14M12 5l7 7-7 7"></path>
+          </svg>
+        </a>
+      </div>
+    </div>
+
   </div>
-  <div class="flex justify-around md:justify-between lg:justify-around  mb-5">
-    <p class="md:ml-28 lg:-ml-16 xl:ml-0 2xl:ml-28">Inscris-toi</p>
-    <p class="content md:hidden"></p>
-    <p class="md:mr-20 lg:-mr-24 xl:-mr-10 2xl:mr-20">On prépare ton menu !</p>
-  </div>
+
 </div>
