--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,5 +1,5 @@
 <nav
-  class="flex absolute top-0 items-center text-right justify-between flex-wrap bg-grey-darkest w-full z-10 pin-t mt-2 ">
+  class="items-center text-right justify-between bg-grey-darkest w-full z-10 mt-2 ">
   <div class="md:mb-2 mb-0">
     <div class="flex items-center ml-3 mt-2">
       <%=link_to root_path do%>
@@ -55,8 +55,8 @@
   <div
     class="w-full block sm:flex-grow sm:flex-row-reverse sm:flex sm:items-center sm:w-auto sm:pt-0 relative pr-8 sm:pr-0 bg-gradient-to-r from-primary-400 to-primary-100 sm:bg-transparent rounded-3xl sm:rounded-none sm:bg-gradient-to-r sm:from-transparent sm:to-transparent"
     id="nav-content">
-    <div class="nav-links sm:flex sm:-mr-10">
-      <ul class="list-reset sm:flex justify-end flex-1 items-center sm:mr-5">
+    <div class="nav-links sm:flex">
+      <ul class="list-reset sm:flex justify-end flex-1 items-center">
 
         <li class="mr-5 mt-4 font-semibold highlight">
           <%= link_to "Se connecter", new_user_session_path, class:"text-lg"%>
