--- a/app/views/static/index.html.erb
+++ b/app/views/static/index.html.erb
@@ -1,4 +1,4 @@
-<div class="container mx-auto relative min-h-full">
+<div class="container mx-auto">
 
   <!--Lead+main img-->
   <div class="top-page flex flex-row items-center justify-around">
