adding flex to nav

--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,5 +1,5 @@
 <nav
-  class="items-center text-right justify-between bg-grey-darkest w-full z-10 mt-2 ">
+  class="flex items-center text-right justify-between bg-grey-darkest w-full z-10 mt-2 ">
   <div class="md:mb-2 mb-0">
     <div class="flex items-center ml-3 mt-2">
       <%=link_to root_path do%>
