moved dashboard upwards, beautify on erbs'

--- a/app/views/users/users/show.html.erb
+++ b/app/views/users/users/show.html.erb
@@ -7,7 +7,7 @@
     <div class="flex flex-col w-0 flex-1 overflow-hidden">
 
       <main class="flex-1 relative overflow-y-auto focus:outline-none" tabindex="0">
-        <div class="py-6">
+        <div class="py-2">
           <div class="max-w-7xl mx-auto px-4 sm:px-6 md:px-8">
             <h1 class="text-2xl font-semibold text-gray-900">Bonjour <span
                 class="text-primary-800"><%= current_user.first_name.capitalize %></h1>
@@ -18,7 +18,7 @@
             <!-- Content -->
 
             <ul class="grid grid-cols-1 gap-6 sm:grid-cols-2 lg:grid-cols-3 mt-8">
-              <li class="col-span-1 bg-white rounded-lg shadow-lg divide-y divide-gray-200 ">
+              <li class="col-span-1 bg-white rounded-lg shadow-xl divide-y divide-gray-200 ">
                 <div class="w-full flex items-center justify-between p-8 space-x-6">
                   <div class="flex-1 truncate">
                     <div class="flex items-center space-x-3">
@@ -40,7 +40,7 @@
                       </div>
                     </div>
 
-               <li class="col-span-1 bg-white rounded-lg shadow-lg divide-y divide-gray-200 ">
+               <li class="col-span-1 bg-white rounded-lg shadow-xl divide-y divide-gray-200 ">
                 <div class="w-full flex items-center justify-between p-8 space-x-6">
                   <div class="flex-1 truncate">
                     <div class="flex items-center space-x-3">
@@ -62,7 +62,7 @@
                       </div>
                     </div>
 
-              <li class="col-span-1 bg-white rounded-lg shadow-lg divide-y divide-gray-200">
+              <li class="col-span-1 bg-white rounded-lg shadow-xl divide-y divide-gray-200">
                 <div class="w-full flex items-center justify-between p-8 space-x-6">
                   <div class="flex-1 truncate">
                     <div class="flex items-center space-x-3">
