--- a/app/views/users/users/_sidebar.html.erb
+++ b/app/views/users/users/_sidebar.html.erb
@@ -1,73 +1,73 @@
 <div class="flex shrink-1 md:flex-shrink-0">
 
-      <div class="flex flex-col w-64">
+  <div class="flex flex-col w-64">
 
-        <div class="flex flex-col flex-grow border-r border-gray-200 pt-5 pb-4  overflow-y-auto">
+    <div class="flex flex-col flex-grow border-r border-gray-200 pt-5 pb-4  overflow-y-auto">
 
-          <div class="mt-5 flex-grow flex flex-col">
-            <nav class="flex-1 px-2 space-y-1">
-
-
-              <%= link_to user_path(current_user), class:"bg-gray-100 text-gray-900 group flex items-center px-2 py-2 text-sm font-medium rounded-md" do %>
-              <svg class="text-gray-500 mr-3 h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
-                stroke="currentColor" aria-hidden="true">
-                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                  d="M3 12l2-2m0 0l7-7 7 7M5 10v10a1 1 0 001 1h3m10-11l2 2m-2-2v10a1 1 0 01-1 1h-3m-6 0a1 1 0 001-1v-4a1 1 0 011-1h2a1 1 0 011 1v4a1 1 0 001 1m-6 0h6" />
-              </svg>
-              Tableau de bord
-              <% end %>
-            
-             <%= render 'users/plans/new' %>
-
-              <%= link_to plans_path, class:"text-gray-600 hover:bg-primary-800 hover:text-white group flex items-center px-2 py-2 text-sm font-medium rounded-md" do %>
-              <svg class="text-gray-400 group-hover:text-white mr-3 h-6 w-6" xmlns="http://www.w3.org/2000/svg"
-                fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
-                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                  d="M8 7V3m8 4V3m-9 8h10M5 21h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v12a2 2 0 002 2z" />
-              </svg>
-              Mes programmes
-              <% end %>
-
-              <%= link_to edit_user_path(current_user), class:"text-gray-600 hover:bg-primary-800 hover:text-white group flex items-center px-2 py-2 text-sm font-medium rounded-md" do %>
-              <svg class="text-gray-400 fill-current group-hover:text-white mr-3 h-6 w-6"
-                xmlns:x="http://ns.adobe.com/Extensibility/1.0/" xmlns:i="http://ns.adobe.com/AdobeIllustrator/10.0/"
-                xmlns:graph="http://ns.adobe.com/Graphs/1.0/" fill="none" xmlns="http://www.w3.org/2000/svg"
-                xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" x="0px" y="0px" viewBox="0 0 100 125"
-                style="enable-background:new 0 0 100 100;" xml:space="preserve">
-                <switch>
-                  <foreignObject requiredExtensions="http://ns.adobe.com/AdobeIllustrator/10.0/" x="0" y="0" width="1"
-                    height="1" />
-                  <g i:extraneous="self">
-                    <g>
-                      <path
-                        d="M34.7,68.9l5.8-5.8c-10.5-0.6-18.9-9.3-18.9-20c0-11.1,9-20,20-20c10.7,0,19.4,8.3,20,18.9l9.5-9.5     c-0.7-1.9-1.6-3.8-2.6-5.5l4.5-5.8c0.5-0.7,0.5-1.6-0.1-2.2l-7.1-7.1c-0.6-0.6-1.5-0.7-2.2-0.1l-5.8,4.5     c-2.7-1.6-5.6-2.8-8.6-3.6l-0.9-7.3C48.2,4.6,47.5,4,46.7,4h-10c-0.8,0-1.5,0.6-1.7,1.5l-0.9,7.3c-3.1,0.8-5.9,2-8.6,3.6     l-5.8-4.5c-0.7-0.5-1.6-0.5-2.2,0.1L10.4,19c-0.6,0.6-0.6,1.5-0.1,2.2l4.5,5.8c-1.6,2.6-2.8,5.5-3.6,8.6L4,36.5     c-0.8,0.1-1.5,0.8-1.5,1.6v10c0,0.8,0.6,1.5,1.5,1.7l7.2,0.9c0.8,3.1,2,5.9,3.6,8.6l-4.5,5.8c-0.5,0.7-0.5,1.6,0.1,2.2l7.1,7     c0.6,0.6,1.5,0.7,2.2,0.2l5.8-4.5c1.8,1.1,3.8,2.1,5.9,2.8C32.4,71.4,33.5,70.2,34.7,68.9z" />
-                      <circle cx="41.6" cy="43.1" r="12.2" />
-                      <path
-                        d="M31.4,88.5l-1.3,5.7c-0.2,1.1,0.7,2,1.8,1.8l5.7-1.3c4.4-1,8.5-2.9,12-5.6L37,76.5C34.3,80,32.3,84.1,31.4,88.5z" />
-                      <rect x="41.7" y="53.7" transform="matrix(0.7071 -0.7071 0.7071 0.7071 -25.9714 63.0907)"
-                        width="43" height="18.3" />
-                      <path
-                        d="M96.4,37.6l-8-8c-1.4-1.4-3.5-1.5-4.7-0.2l-7.1,7.1l13,13l7.1-7.1C97.9,41.1,97.8,39,96.4,37.6z" />
-                    </g>
-                  </g>
-                </switch>
-              </svg>
-              Mettre à jour mon profil
-              <% end %>
+      <div class="mt-5 flex-grow flex flex-col">
+        <nav class="flex-1 px-2 space-y-1">
 
 
-              <a href="#"
-                class="text-gray-600 hover:bg-primary-800 hover:text-white group flex items-center px-2 py-2 text-sm font-medium rounded-md">
-                <!-- Heroicon name: chart-bar -->
-                <svg class="text-gray-400 group-hover:text-white mr-3 h-6 w-6" xmlns="http://www.w3.org/2000/svg"
-                  fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
-                  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                    d="M9 19v-6a2 2 0 00-2-2H5a2 2 0 00-2 2v6a2 2 0 002 2h2a2 2 0 002-2zm0 0V9a2 2 0 012-2h2a2 2 0 012 2v10m-6 0a2 2 0 002 2h2a2 2 0 002-2m0 0V5a2 2 0 012-2h2a2 2 0 012 2v14a2 2 0 01-2 2h-2a2 2 0 01-2-2z" />
-                </svg>
-                Admin
-              </a>
-            </nav>
-          </div>
-        </div>
+          <%= link_to user_path(current_user), class:"bg-gray-100 text-gray-900 group flex items-center px-2 py-2 text-sm font-medium rounded-md" do %>
+          <svg class="text-gray-500 mr-3 h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
+            stroke="currentColor" aria-hidden="true">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+              d="M3 12l2-2m0 0l7-7 7 7M5 10v10a1 1 0 001 1h3m10-11l2 2m-2-2v10a1 1 0 01-1 1h-3m-6 0a1 1 0 001-1v-4a1 1 0 011-1h2a1 1 0 011 1v4a1 1 0 001 1m-6 0h6" />
+          </svg>
+          Tableau de bord
+          <% end %>
+
+          <%= render 'users/plans/new' %>
+
+          <%= link_to plans_path, class:"text-gray-600 hover:bg-primary-800 hover:text-white group flex items-center px-2 py-2 text-sm font-medium rounded-md" do %>
+          <svg class="text-gray-400 group-hover:text-white mr-3 h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none"
+            viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+              d="M8 7V3m8 4V3m-9 8h10M5 21h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v12a2 2 0 002 2z" />
+          </svg>
+          Mes programmes
+          <% end %>
+
+          <%= link_to edit_user_path(current_user), class:"text-gray-600 hover:bg-primary-800 hover:text-white group flex items-center px-2 py-2 text-sm font-medium rounded-md" do %>
+          <svg class="text-gray-400 fill-current group-hover:text-white mr-3 h-6 w-6"
+            xmlns:x="http://ns.adobe.com/Extensibility/1.0/" xmlns:i="http://ns.adobe.com/AdobeIllustrator/10.0/"
+            xmlns:graph="http://ns.adobe.com/Graphs/1.0/" fill="none" xmlns="http://www.w3.org/2000/svg"
+            xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" x="0px" y="0px" viewBox="0 0 100 125"
+            style="enable-background:new 0 0 100 100;" xml:space="preserve">
+            <switch>
+              <foreignObject requiredExtensions="http://ns.adobe.com/AdobeIllustrator/10.0/" x="0" y="0" width="1"
+                height="1" />
+              <g i:extraneous="self">
+                <g>
+                  <path
+                    d="M34.7,68.9l5.8-5.8c-10.5-0.6-18.9-9.3-18.9-20c0-11.1,9-20,20-20c10.7,0,19.4,8.3,20,18.9l9.5-9.5     c-0.7-1.9-1.6-3.8-2.6-5.5l4.5-5.8c0.5-0.7,0.5-1.6-0.1-2.2l-7.1-7.1c-0.6-0.6-1.5-0.7-2.2-0.1l-5.8,4.5     c-2.7-1.6-5.6-2.8-8.6-3.6l-0.9-7.3C48.2,4.6,47.5,4,46.7,4h-10c-0.8,0-1.5,0.6-1.7,1.5l-0.9,7.3c-3.1,0.8-5.9,2-8.6,3.6     l-5.8-4.5c-0.7-0.5-1.6-0.5-2.2,0.1L10.4,19c-0.6,0.6-0.6,1.5-0.1,2.2l4.5,5.8c-1.6,2.6-2.8,5.5-3.6,8.6L4,36.5     c-0.8,0.1-1.5,0.8-1.5,1.6v10c0,0.8,0.6,1.5,1.5,1.7l7.2,0.9c0.8,3.1,2,5.9,3.6,8.6l-4.5,5.8c-0.5,0.7-0.5,1.6,0.1,2.2l7.1,7     c0.6,0.6,1.5,0.7,2.2,0.2l5.8-4.5c1.8,1.1,3.8,2.1,5.9,2.8C32.4,71.4,33.5,70.2,34.7,68.9z" />
+                  <circle cx="41.6" cy="43.1" r="12.2" />
+                  <path
+                    d="M31.4,88.5l-1.3,5.7c-0.2,1.1,0.7,2,1.8,1.8l5.7-1.3c4.4-1,8.5-2.9,12-5.6L37,76.5C34.3,80,32.3,84.1,31.4,88.5z" />
+                  <rect x="41.7" y="53.7" transform="matrix(0.7071 -0.7071 0.7071 0.7071 -25.9714 63.0907)" width="43"
+                    height="18.3" />
+                  <path
+                    d="M96.4,37.6l-8-8c-1.4-1.4-3.5-1.5-4.7-0.2l-7.1,7.1l13,13l7.1-7.1C97.9,41.1,97.8,39,96.4,37.6z" />
+                </g>
+              </g>
+            </switch>
+          </svg>
+          Mettre à jour mon profil
+          <% end %>
+
+
+          <a href="#"
+            class="text-gray-600 hover:bg-primary-800 hover:text-white group flex items-center px-2 py-2 text-sm font-medium rounded-md">
+            <!-- Heroicon name: chart-bar -->
+            <svg class="text-gray-400 group-hover:text-white mr-3 h-6 w-6" xmlns="http://www.w3.org/2000/svg"
+              fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
+              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                d="M9 19v-6a2 2 0 00-2-2H5a2 2 0 00-2 2v6a2 2 0 002 2h2a2 2 0 002-2zm0 0V9a2 2 0 012-2h2a2 2 0 012 2v10m-6 0a2 2 0 002 2h2a2 2 0 002-2m0 0V5a2 2 0 012-2h2a2 2 0 012 2v14a2 2 0 01-2 2h-2a2 2 0 01-2-2z" />
+            </svg>
+            Admin
+          </a>
+        </nav>
       </div>
     </div>
+  </div>
+</div>
