--- a/app/views/users/users/_welcome.html.erb
+++ b/app/views/users/users/_welcome.html.erb
@@ -1,8 +1,8 @@
  <div
-  class="flex md:flex-row md:items-center justify-around mt-24 md:mt-32 container border-gray-200 border-b-2 min-w-full">
+   class="flex md:flex-row md:items-center justify-around mt-2 container border-gray-200 border-b-2 min-w-full">
 
-  <div class="text-left flex flex-col md:text-left  mt-5">    
-  </div>
+   <div class="text-left flex flex-col md:text-left  mt-5">
+   </div>
 
-  <!-- buttons -->  
-</div>
+   <!-- buttons -->
+ </div>
