adding github in footer, color change in footer,  adding opacity

--- a/app/assets/stylesheets/static.scss
+++ b/app/assets/stylesheets/static.scss
@@ -9,7 +9,7 @@ body {
 }
 
 .faq {
-  background-image: url(asset_path('BG.svg'));
+  background-image: url(asset_path('bg_faq.svg'));
   background-size: cover;
   background-repeat: no-repeat;
 }
