layout dashboard user

--- a/app/views/users/plans/_show.html.erb
+++ b/app/views/users/plans/_show.html.erb
@@ -4,7 +4,7 @@
   <%= render "users/plans/numberofdays"%>
        
         <!--menu cards start-->
-  <div id="day-recipe" class="flex flex-col md:flex-row items-center justify-center ml-5 mt-16 mb-5">  
+  <div id="day-recipe" class="flex flex-col md:flex-row items-center justify-center mx-auto mt-8">  
     <%= render "users/days/show"%>
   </div>  
 
