--- a/app/views/users/plans/_numberofdays.html.erb
+++ b/app/views/users/plans/_numberofdays.html.erb
@@ -1,21 +1,16 @@
-  <p class="mt-5 ml-5 md:ml-0">Généré le :<%= @plan.created_at.strftime("%d-%m-%Y") %> </p>
-        
-        <!--card organization-->
-  <div class="days flex items-center justify-center">
-    <div class="mt-10 mr-1 md:mt-12">
-      <i class="fas fa-angle-left fa-3x contents lg:hidden "></i>
-    </div>
-      	<!-- day cards start -->
-	  <div class="flex mt-10 md:mt-14 lg:mt-16">
-     <% @plan.days.each.with_index do |day, idx| %>
-       
-         <%= render "users/days/days",day: day, idx: idx %> 
-       
-    <% end %>
-    </div>
-    
-	        <!-- day cards end  -->
-    <div class="mt-10 ml-1 md:mt-12">
-      <i class="fas fa-angle-right fa-3x contents lg:hidden"></i>
-    </div>
+<!--card organization-->
+<div class="days flex items-center justify-center">
+  <div class="mt-2 mr-1 md:mt-2">
+    <i class="fas fa-angle-left fa-3x contents lg:hidden "></i>
   </div>
+  <!-- day cards start -->
+  <div class="flex mt-3">
+    <% @plan.days.each.with_index do |day, idx| %>
+    <%= render "users/days/days",day: day, idx: idx %>
+    <% end %>
+  </div>
+  <!-- day cards end  -->
+  <div class="mt-10 ml-1 md:mt-12">
+    <i class="fas fa-angle-right fa-3x contents lg:hidden"></i>
+  </div>
+</div>
