Faq added in landing page

--- a/app/assets/stylesheets/static.scss
+++ b/app/assets/stylesheets/static.scss
@@ -8,7 +8,7 @@ body {
     z-index: -1;
 }
 
-.faq {
+.presentation {
   background-image: url(asset_path('bg_faq.svg'));
   background-size: cover;
   background-repeat: no-repeat;
