margin added to give some space in landing pages elements

--- a/app/views/static/index.html.erb
+++ b/app/views/static/index.html.erb
@@ -21,7 +21,7 @@
   </div>
 
   <!--Timeline-->
-  <div class="mt-10 md:mt-14 lg:mt-24">
+  <div class="my-10 md:my-14 lg:my-24">
     <div class="flex flex-wrap justify-center">
       <p>Renseigne tes informations</p>
     </div>
