adding margin top for dashboard and faq text is smaller

--- a/app/views/static/index.html.erb
+++ b/app/views/static/index.html.erb
@@ -77,6 +77,7 @@
     </div>
 
   </div>
+
   <!--faq start-->
   <div class="px-5 py-24 mx-auto text-gray-700">
     <div class="mb-20 text-center">
@@ -96,7 +97,7 @@
           </summary>
 
           <p class="px-4 py-2 bg-white">
-            Notre application vous propose des menus personnalisés en fonction des informations que vous nous
+            Nous vous proposons des menus personnalisés en fonction des informations que vous nous
             transmettez à travers 70 000 recettes !
           </p>
         </details>
